# asscpp

./: .gitmodules  LICENSE  README.md
cscpp/: CMakeLists.txt  package.xml
cscpp/include/cscpp/: coverage_path_planning_heuristic.h  coverage_path_planning_heuristic_gpu.h  frustum_culling.h  frustum_culling_gpu.h  occlusion_culling.h  occlusion_culling_gpu.h  voxel_grid_occlusion_estimation.h  voxel_grid_occlusion_estimation_gpu.h
cscpp/launch/: coverage_heuristic_test.launch
cscpp/pcd/: etihad_nowheels_nointernal_scaled_newdensed.pcd  hoa_translated_densed_scaled.pcd
cscpp/rviz/: sspp_coverage_heuristic.rviz
cscpp/src/: coverage_heuristic_gpu.cpp  coverage_heuristic_test.cpp  coverage_path_planning_heuristic.cpp  coverage_path_planning_heuristic_gpu.cpp  frustum_culling.cpp  frustum_culling_gpu.cu  occlusion_culling.cpp  occlusion_culling_gpu.cpp  test_cuda.cu  voxel_grid_occlusion_estimation.cpp  voxel_grid_occlusion_estimation_gpu.cu
cscpp/txt/: SearchSpaceCam_2.5m_1to4_etihad_nowheels_nointernal_scaled_newdensed.pcd_0.txt  SearchSpaceCam_2.5m_1to4_etihad_nowheels_nointernal_scaled_newdensed.pcd_1.txt  SearchSpaceUAV_2.5m_1to4_etihad_nowheels_nointernal_scaled_newdensed.pcd.txt  search_space_robot_etihad_nowheels_nointernal_scaled_newdensed.pcd_dsscpp.txt  search_space_robot_hoa_translated_densed_scaled.pcd_dsscpp.txt
